exercise without control

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="numbers"></div>
+        <div class="numbers-end"></div>
+        <button id="start">Mostra numeri</button>
+        <button id="verify">Verifica numeri inseriti</button>
     </div>
 </body>
 </html>
