--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 </head>
 <body>
     <div class="container">
+        <h1>Memorizza bene i numeri che vedi a schermo!</h1>
         <div class="numbers"></div>
         <div class="numbers-end"></div>
-        <button id="start">Mostra numeri</button>
-        <button id="verify">Verifica numeri inseriti</button>
     </div>
 </body>
 </html>
